# qrcode

./: main.py  pyproject.toml
