[tool.poetry]
name = "qrcodegen"
version = "0.1.0"
description = "Generate QRCode from an URL"
authors = ["Patrick <pdassier@free.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.3.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
